# tjlutils

./: CMakeLists.txt  README.md  commands.txt  copy-headers-windows.sh  tjlutils-install.sh  tjlutils.pro  tjlutils.pro.user.02a1bcd  tjlutils.pro.user.2c393ce  tjlutils.sln  tjlutils.vcxproj  tjlutils.vcxproj.filters  udpduplex.h  udpduplextest-send
Debug/: tjlutils.idb
Debug/tjlutils.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  tjlutils.lastbuildstate
arduino/firmware/: firmware.ino
arduino/firmware/include/: arduinoinit.h  arduinopcstrings.h  candatapacket.h  canmessage.h  digitalwritefast.h  failsafe.h  fastio.h  firmwareutilities.h  gpio.h  mcp_can.h  serialportinfo.h  shortwatchdog.h
arduino/firmware/src/: arduinoinit.cpp  arduinopcstrings.cpp  candatapacket.cpp  canmessage.cpp  failsafe.cpp  firmwareutilities.cpp  gpio.cpp  mcp_can.cpp  shortwatchdog.cpp
arduino/include/: arduino.h  arduinofactory.h  arduinohelper.h  arduinomega.h  arduinonano.h  arduinouno.h  candatapacket.h  canmessage.h  gpio.h  protectedserialport.h
arduino/include/old-bad/: arduino.h
arduino/src/: arduino.cpp  arduinofactory.cpp  arduinomega.cpp  arduinonano.cpp  arduinouno.cpp  candatapacket.cpp  canmessage.cpp  gpio.cpp  protectedserialport.cpp
arduino/src/old-bad/: arduino.cpp
arduino/test/: arduino-test  arduino-test.cpp  udp-serial-passthrough  udp-serial-passthrough.cpp
arduino/tests/: arduino-test  arduino-test.cpp
bitset/: bitset.h
commandlineparser/include/: commandlineparser.h
common/: tjlutils.h
crypto/include/: crypto.h  hash.h
crypto/src/: crypto.cpp  hashtest.cpp
datetime/: datetime.cpp  datetime.h
datetime/include/: datetime.h
datetime/src/: datetime.cpp
eventtimer/: eventtimer-with-events.h  eventtimer.h
eventtimer/include/: eventtimer.h
eventtimer/src/: eventtimer.cpp
eventtimer/test/: event_timer_test  event_timer_test.cpp
fileutilities/: fileutilities.cpp  fileutilities.h
fileutilities/include/: fileutilities.h  win32-dirent.h
fileutilities/src/: fileutilities.cpp  win32-dirent.cpp
generalutilities/: generalutilities.cpp  generalutilities.h
generalutilities/include/: generalutilities.h
generalutilities/src/: generalutilities.cpp
generalutilities/test/: test.cpp  testFunction.cpp
ibytestream/: ibytestream.cpp  ibytestream.h  tscriptexecutor.h
mathutilities/: mathutilities.cpp  mathutilities.h
mathutilities/include/: mathutilities.h
mathutilities/src/: mathutilities.cpp
prettyprinter/: prettyprinter.cpp  prettyprinter.h
prettyprinter/include/: prettyprinter.h
prettyprinter/src/: prettyprinter.cpp
pythoncrypto/: pythoncrypto.cpp  pythoncrypto.h
pythoncrypto/include/: pythoncrypto.h
pythoncrypto/src/: pythoncrypto.cpp
serialport/: serialport.cpp  serialport.h
serialport/cs-helper/: EnumerateSerial.cs
serialport/include/: serialport.h  smartserialportfuture.h
serialport/src/: serialport.cpp  smartserialportfuture.cpp
stringformat/: stringformat.h
stringformat/include/: stringformat.h
stringformat/src/: stringformat.cpp
stringformat/test/: test  test.cpp
systemcommand/: systemcommand.cpp  systemcommand.h
systemcommand/include/: systemcommand.h
systemcommand/src/: systemcommand.cpp
tcpclient/: tcpclient.cpp  tcpclient.h
tcpclient/test/: tcpclient.cpp
tcpduplex/: tcpduplex.cpp  tcpduplex.h
tcpduplex/test/: udpduplextest-send
tcpserver/: tcpserver.cpp  tcpserver.h
templateobjects/: templateobjects.h
traceentry/include/: traceentry.h
tstream/: tscriptexecutor.h  tscriptreader.cpp  tstream.h
tstream/include/: tscriptexecutor.h  tscriptreader.h  tstream.h  tstreamstrings.h
tstream/src/: tscriptexecutor.cpp  tscriptreader.cpp  tstream.cpp  tstreamstrings.cpp
udpclient/: udpclient.cpp  udpclient.h
udpclient/include/: udpclient.h
udpclient/src/: udpclient.cpp
udpclient/test/: second-udpclient  second-udpclient.cpp  third-udpclient  third-udpclient.cpp  udpclient  udpclient.cpp
udpduplex/: udpduplex.cpp  udpduplex.h
udpduplex/include/: udpduplex.h
udpduplex/src/: udpduplex.cpp
udpduplex/test/: dynamic-send-test.cpp  udpduplextest-receive  udpduplextest-receive.cpp  udpduplextest-send.cpp
udpserver/: udpserver.cpp  udpserver.h
udpserver/include/: udpserver.h
udpserver/src/: udpserver.cpp
udpserver/test/: dynamic-send-test  udptest  udptest.cpp
